web-infras/parser/tests/fixtures/babel/es2015/duplicate-proto/without-assignment-expression/output.txt
[SyntaxError]: property name __proto__ appears more than once in object literal (3,3)
3|  __proto__: a,
 | ^
